# PyMapAccuracy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  PyMapAccuracy_Paper_Comparison.ipynb  PyMapAccuracy_Tutorial.ipynb  README.md  matrix_comparison_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
src/pymapaccuracy/: __init__.py  estimators.py
tests/: test_olofsson.py  test_stehman2014.py
